--- a/index.html
+++ b/index.html
@@ -79,16 +79,28 @@
 		<div id= "border1"></div>
 		<div class= "search">
 			<div class="logo">
-				<h3>The company you want to search: </h3>
+				<h4>The company you are interest in: </h4>
 			</div>
  	
-	 		<form class="search-form" target="_blank" id= "search-form">
+	 		<form class="search-form" method= "get" target="_blank" id= "search-form">
 	 			<input type="text" class="search-text" name="q" id= "search_input"/>
 	 			<input type="submit" class="search-button" value="search"/>
 	 		</form>
+
+	 		<div class= "information">
+	 			<h4>The jobs provided by this company: </h4>
+	 			<div id= "search-result">
+	 				<p>This section need the following knowledge about php and ajax so that I can submit the form and 
+	 				get the information I need</p>
+	 			</div>
+	 		</div>
+		</div>
+
+		<div id= "border2">
 		</div>
 
 		<div class= "companybox">
+			<h4>Some companies you may interest in: </h4>
 			<div class= "company">
 				<p>IT Company</p>
 			</div>
