--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<h3>Resume</h3>
 		</div>
 		<div class= "topbox">
-			<div >SAI XU</div>
+			<div id= "name">SAI XU</div>
 			<div id= "email">sax2@pitt.edu</div>
 		</div>
 		<div class= "border"></div>
